- CHANGE: Multiple rate inspection plot improved. Now all plot on same axes ranges, better colours and spacing.
- FIX: Rolling rate plot failed with even a single NA in time or oxygen data.
- CHANGE: Prints NA locations for all oxygen columns they are found in (previously only printed if a 2-col df)
- CHANGE: If multiple columns in df input, warning that 1:2 used by default.
- CHANGE: Stops if 'oxygen' or 'time' columns not present in the input
- CHANGE: Stops if 'oxygen' and 'time' columns conflict
- FIX: Fix for points sometimes being plotted twice slightly offset in big datasets.




========================== S3 Methods ============================

All
- Changed primary input `x` to `object` for consistency across all (was in some, not in others)
- All summary S3 have `export = TRUE` for export of summary table/value
- Added `return(invisible(object))` where missing to allow piping
- All stop if 'pos' too high
- All print much better with nicer spacing, especially in pipes

print.adjust_rate
- FIX: prints adjustment correctly if pos > 1

summary.adjust_rate
- FIX: 'adjustment' column was missing

summary.convert_rate
- FIX: prints summary table as columns correctly

print.inspect
- NEW: if uneven time, now prints min/max intervals found
- NEW: time error locations now printed out when multiple o2 columns inspected

print.auto_rate
- CHANGE: prints all results of interval method regardless of pos or width

print.calc_rate.ft
- NEW: now has `pos` argument

plot.calc_rate
- CHANGE: changed `rep` to `pos` for consistency

mean.auto_rate
mean.calc_rate
mean.calc_rate.bg
mean.adjust_rate
mean.convert_rate
- NEW: All work on relevant output rate. None alter the output in any way (i.e. normal invisible return of input object), but have `export` argument, so values can be exported if user wants. None really *that* useful except `mean.convert_rate`, which is the one we can point users to, so they can come up with a final mean rate
